Test: 우승자구하기 테스트 수정